--- a/src/pages/students/students.html
+++ b/src/pages/students/students.html
@@ -1,11 +1,87 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      About
+      Students
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-
+  <ion-list>
+    <ion-item [navPush]="student_report">
+      <div style="border:1px solid #ddd;padding:10px;border-radius:5px;">
+        <p>
+          PETER KIM
+          <span style="float:right;color:#ddd">5-5</span>
+        </p>
+        <hr>
+        <p>Arrival time :
+          <span style="float:right;color:#333">9:00</span>
+        </p>
+        <p style="color:blue">Parents :
+          <span style="float:right;color:#333">kon kim [ 092 5487 5784]</span>
+        </p>
+      </div>
+    </ion-item>
+    <ion-item>
+      <div style="border:1px solid #ddd;padding:10px;border-radius:5px;">
+        <p>
+          PETER KIM
+          <span style="float:right;color:#ddd">5-5</span>
+        </p>
+        <hr>
+        <p>Arrival time :
+          <span style="float:right;color:#333">9:00</span>
+        </p>
+        <p style="color:blue">Parents :
+          <span style="float:right;color:#333">kon kim [ 092 5487 5784]</span>
+        </p>
+      </div>
+    </ion-item>
+    <ion-item>
+      <div style="border:1px solid #ddd;padding:10px;border-radius:5px;">
+        <p>
+          PETER KIM
+          <span style="float:right;color:#ddd">5-5</span>
+        </p>
+        <hr>
+        <p>Arrival time :
+          <span style="float:right;color:#333">9:00</span>
+        </p>
+        <p style="color:blue">Parents :
+          <span style="float:right;color:#333">kon kim [ 092 5487 5784]</span>
+        </p>
+      </div>
+    </ion-item>
+    <ion-item>
+      <div style="border:1px solid #ddd;padding:10px;border-radius:5px;">
+        <p>
+          PETER KIM
+          <span style="float:right;color:#ddd">5-5</span>
+        </p>
+        <hr>
+        <p>Arrival time :
+          <span style="float:right;color:#333">9:00</span>
+        </p>
+        <p style="color:blue">Parents :
+          <span style="float:right;color:#333">kon kim [ 092 5487 5784]</span>
+        </p>
+      </div>
+    </ion-item>
+    <ion-item>
+      <div style="border:1px solid #ddd;padding:10px;border-radius:5px;">
+        <p>
+          PETER KIM
+          <span style="float:right;color:#ddd">5-5</span>
+        </p>
+        <hr>
+        <p>Arrival time :
+          <span style="float:right;color:#333">9:00</span>
+        </p>
+        <p style="color:blue">Parents :
+          <span style="float:right;color:#333">kon kim [ 092 5487 5784]</span>
+        </p>
+      </div>
+    </ion-item>
+  </ion-list>
 </ion-content>
