--- a/src/pages/report/report.html
+++ b/src/pages/report/report.html
@@ -7,52 +7,52 @@
 <ion-content>
     <ion-list>
         <ion-item>
-            <ion-label>PETER Kime</ion-label>
-            <ion-checkbox checked="checked"></ion-checkbox>
+            <ion-label>PETER kim</ion-label>
+            <ion-checkbox checked="true"></ion-checkbox>
         </ion-item>
         <ion-item>
-            <ion-label>PETER Kime</ion-label>
-            <ion-checkbox checked="checked"></ion-checkbox>
+            <ion-label>Pei tea</ion-label>
+            <ion-checkbox checked="true"></ion-checkbox>
         </ion-item>
         <ion-item>
-            <ion-label>PETER Kime</ion-label>
-            <ion-checkbox checked="checked"></ion-checkbox>
+            <ion-label>lee kw</ion-label>
+            <ion-checkbox checked="true"></ion-checkbox>
         </ion-item>
         <ion-item>
-            <ion-label>PETER Kime</ion-label>
-            <ion-checkbox checked="checked"></ion-checkbox>
+            <ion-label>Kasper</ion-label>
+            <ion-checkbox checked="true"></ion-checkbox>
         </ion-item>
         <ion-item>
-            <ion-label>PETER Kime</ion-label>
-            <ion-checkbox checked="checked"></ion-checkbox>
+            <ion-label>pduke</ion-label>
+            <ion-checkbox checked="true"></ion-checkbox>
         </ion-item>
         <ion-item>
-            <ion-label>PETER Kime</ion-label>
-            <ion-checkbox checked="checked"></ion-checkbox>
+            <ion-label>joumduk</ion-label>
+            <ion-checkbox checked="true"></ion-checkbox>
         </ion-item>
         <ion-item>
-            <ion-label>PETER Kime</ion-label>
-            <ion-checkbox checked="checked"></ion-checkbox>
+            <ion-label>weuks</ion-label>
+            <ion-checkbox checked="true"></ion-checkbox>
         </ion-item>
         <ion-item>
-            <ion-label>PETER Kime</ion-label>
-            <ion-checkbox checked="checked"></ion-checkbox>
+            <ion-label>Euk </ion-label>
+            <ion-checkbox checked="true"></ion-checkbox>
         </ion-item>
         <ion-item>
-            <ion-label>PETER Kime</ion-label>
-            <ion-checkbox checked="checked"></ion-checkbox>
+            <ion-label>Pek</ion-label>
+            <ion-checkbox checked="true"></ion-checkbox>
         </ion-item>
         <ion-item>
-            <ion-label>PETER Kime</ion-label>
-            <ion-checkbox checked="checked"></ion-checkbox>
+            <ion-label>kim</ion-label>
+            <ion-checkbox checked="true"></ion-checkbox>
         </ion-item>
         <ion-item>
-            <ion-label>PETER Kime</ion-label>
-            <ion-checkbox checked="checked"></ion-checkbox>
+            <ion-label>woon</ion-label>
+            <ion-checkbox checked="true"></ion-checkbox>
         </ion-item>
         <ion-item>
-            <ion-label>PETER Kime</ion-label>
-            <ion-checkbox checked="checked"></ion-checkbox>
+            <ion-label>win</ion-label>
+            <ion-checkbox checked="true"></ion-checkbox>
         </ion-item>
 
     </ion-list>
