--- a/src/pages/student_report/student_report.html
+++ b/src/pages/student_report/student_report.html
@@ -7,33 +7,33 @@
 <ion-content>
     <ion-list>
         <ion-item [navPush]="student_report">
-            <div style="border:1px solid #ddd;padding:10px;border-radius:5px;">
+            <div clasee="student_info">
                 <p>
                     PETER KIM
-                    <span style="float:right;color:#ddd">5-5</span>
+                    <span class="student_class">5-5</span>
                 </p>
                 <hr>
                 <p>Arrival time :
-                    <span style="float:right;color:#333">9:00</span>
+                    <span class="arrival_time">9:00</span>
                 </p>
-                <p style="color:blue">Parents :
-                    <span style="float:right;color:#333">kon kim [ 092 5487 5784]</span>
+                <p class="parents_form">Parents :
+                    <span class="parents_info">kon kim [ 092 5487 5784]</span>
                 </p>
             </div>
         </ion-item>
         <ion-item>
-            <div style="text-align:center">
+            <div class="QRcode">
                 <img src="/assets/Qr-code-ver-10.png">
 
             </div>
         </ion-item>
         <ion-item>
             <ion-label>23 / 5 / 2017</ion-label>
-            <ion-checkbox checked="checked"></ion-checkbox>
+            <ion-checkbox checked="true"></ion-checkbox>
         </ion-item>
         <ion-item>
             <ion-label>30 / 5 / 2017</ion-label>
-            <ion-checkbox></ion-checkbox>
+            <ion-checkbox checked="true"></ion-checkbox>
         </ion-item>
         <ion-item>
             <ion-label>01 / 6 / 2017</ion-label>
@@ -41,7 +41,7 @@
         </ion-item>
         <ion-item>
             <ion-label>08 / 6 / 2017</ion-label>
-            <ion-checkbox></ion-checkbox>
+            <ion-checkbox checked="true"></ion-checkbox>
         </ion-item>
 
         <ion-item>
@@ -50,15 +50,15 @@
         </ion-item>
         <ion-item>
             <ion-label>15 / 6 / 2017</ion-label>
-            <ion-checkbox></ion-checkbox>
+            <ion-checkbox checked="true"></ion-checkbox>
         </ion-item>
         <ion-item>
             <ion-label>20 / 6 / 2017</ion-label>
-            <ion-checkbox></ion-checkbox>
+            <ion-checkbox checked="true"></ion-checkbox>
         </ion-item>
         <ion-item>
             <ion-label>20 / 7 / 2017</ion-label>
-            <ion-checkbox></ion-checkbox>
+            <ion-checkbox checked="true"></ion-checkbox>
         </ion-item>
 
         <ion-item>
