--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -9,15 +9,15 @@
 <ion-content>
   <ion-list>
     <ion-item>
-      <div style="margin:1px;border:1px solid #ddd;border-radius:5px;padding:5px 10px;">
+      <div class="user_info">
         <p>
           <ion-icon name="ionic" item-start></ion-icon>Peter kim
         </p>
       </div>
     </ion-item>
     <ion-item>
-      <div style="margin:1px;border:1px solid #ddd;border-radius:5px;padding:5px 10px;">
-        <ul style="list-style:none;padding-left:0;line-height:25px;">
+      <div class="card">
+        <ul>
           <li>School : P High school</li>
           <li>No of Students : 50</li>
           <li>teacher in charge : 5-5</li>
@@ -26,10 +26,10 @@
       </div>
     </ion-item>
     <ion-item>
-        <button [navPush]="report" type="button" style="width:100%;border-radius:5px;background:#1E90FF;color:#fff;padding:10px;font-size:20px;">Report</button>
+        <button [navPush]="report" type="button" class="btn-blue">Report</button>
       </ion-item>
     <ion-item>
-      <button type="button" style="width:100%;border-radius:5px;background:red;color:#fff;padding:10px;font-size:20px;">Sign Out</button>
+      <button type="button" class="btn-red">Sign Out</button>
     </ion-item>
   </ion-list>
 </ion-content>
