--- a/src/pages/students/students.html
+++ b/src/pages/students/students.html
@@ -9,77 +9,77 @@
 <ion-content padding>
   <ion-list>
     <ion-item [navPush]="student_report">
-      <div style="border:1px solid #ddd;padding:10px;border-radius:5px;">
+      <div class="student_card">
         <p>
           PETER KIM
-          <span style="float:right;color:#ddd">5-5</span>
+          <span class="student_class">5-5</span>
         </p>
         <hr>
         <p>Arrival time :
-          <span style="float:right;color:#333">9:00</span>
+          <span class="arrival_time">9:00</span>
         </p>
-        <p style="color:blue">Parents :
-          <span style="float:right;color:#333">kon kim [ 092 5487 5784]</span>
+        <p class="parents_form" >Parents :
+          <span class="parents_info" >kon kim [ 092 5487 5784]</span>
         </p>
       </div>
     </ion-item>
-    <ion-item>
-      <div style="border:1px solid #ddd;padding:10px;border-radius:5px;">
+    <ion-item [navPush]="student_report">
+      <div class="student_card">
         <p>
-          PETER KIM
-          <span style="float:right;color:#ddd">5-5</span>
+          Kasper 
+          <span class="student_class">5-5</span>
         </p>
         <hr>
         <p>Arrival time :
-          <span style="float:right;color:#333">9:00</span>
+          <span class="arrival_time">9:50</span>
         </p>
-        <p style="color:blue">Parents :
-          <span style="float:right;color:#333">kon kim [ 092 5487 5784]</span>
+        <p class="parents_form" >Parents :
+          <span class="parents_info" >eli [ 092 1234 5122]</span>
         </p>
       </div>
     </ion-item>
-    <ion-item>
-      <div style="border:1px solid #ddd;padding:10px;border-radius:5px;">
+    <ion-item [navPush]="student_report">
+      <div class="student_card">
         <p>
-          PETER KIM
-          <span style="float:right;color:#ddd">5-5</span>
+          Pasi
+          <span class="student_class">5-5</span>
         </p>
         <hr>
         <p>Arrival time :
-          <span style="float:right;color:#333">9:00</span>
+          <span class="arrival_time">9:30</span>
         </p>
-        <p style="color:blue">Parents :
-          <span style="float:right;color:#333">kon kim [ 092 5487 5784]</span>
+        <p class="parents_form" >Parents :
+          <span class="parents_info" >kon kim [ 092 3742 6123]</span>
         </p>
       </div>
     </ion-item>
-    <ion-item>
-      <div style="border:1px solid #ddd;padding:10px;border-radius:5px;">
+    <ion-item [navPush]="student_report">
+      <div class="student_card">
         <p>
           PETER KIM
-          <span style="float:right;color:#ddd">5-5</span>
+          <span class="student_class">5-5</span>
         </p>
         <hr>
         <p>Arrival time :
-          <span style="float:right;color:#333">9:00</span>
+          <span class="arrival_time">9:00</span>
         </p>
-        <p style="color:blue">Parents :
-          <span style="float:right;color:#333">kon kim [ 092 5487 5784]</span>
+        <p class="parents_form" >Parents :
+          <span class="parents_info" >kon kim [ 092 5487 5784]</span>
         </p>
       </div>
     </ion-item>
-    <ion-item>
-      <div style="border:1px solid #ddd;padding:10px;border-radius:5px;">
+    <ion-item [navPush]="student_report">
+      <div class="student_card">
         <p>
           PETER KIM
-          <span style="float:right;color:#ddd">5-5</span>
+          <span class="student_class">5-5</span>
         </p>
         <hr>
         <p>Arrival time :
-          <span style="float:right;color:#333">9:00</span>
+          <span class="arrival_time">9:00</span>
         </p>
-        <p style="color:blue">Parents :
-          <span style="float:right;color:#333">kon kim [ 092 5487 5784]</span>
+        <p class="parents_form" >Parents :
+          <span class="parents_info" >kon kim [ 092 5487 5784]</span>
         </p>
       </div>
     </ion-item>
