--- a/src/pages/calendar/calendar.html
+++ b/src/pages/calendar/calendar.html
@@ -5,65 +5,5 @@
 </ion-header>
 
 <ion-content>
-    <ion-list>
-        <ion-item [navPush]="student_report">
-            <div style="border:1px solid #ddd;padding:10px;border-radius:5px;">
-                <p>
-                    PETER KIM
-                    <span style="float:right;color:#ddd">5-5</span>
-                </p>
-                <hr>
-                <p>Arrival time :
-                    <span style="float:right;color:#333">9:00</span>
-                </p>
-                <p style="color:blue">Parents :
-                    <span style="float:right;color:#333">kon kim [ 092 5487 5784]</span>
-                </p>
-            </div>
-        </ion-item>
-        <ion-item>
-            <div style="text-align:center">
-                <img src="/assets/Qr-code-ver-10.png">
-
-            </div>
-        </ion-item>
-        <ion-item>
-            <ion-label>23 / 5 / 2017</ion-label>
-            <ion-checkbox checked="checked"></ion-checkbox>
-        </ion-item>
-        <ion-item>
-            <ion-label>30 / 5 / 2017</ion-label>
-            <ion-checkbox></ion-checkbox>
-        </ion-item>
-        <ion-item>
-            <ion-label>01 / 6 / 2017</ion-label>
-            <ion-checkbox></ion-checkbox>
-        </ion-item>
-        <ion-item>
-            <ion-label>08 / 6 / 2017</ion-label>
-            <ion-checkbox></ion-checkbox>
-        </ion-item>
-
-        <ion-item>
-            <ion-label>14 / 6 / 2017</ion-label>
-            <ion-checkbox></ion-checkbox>
-        </ion-item>
-        <ion-item>
-            <ion-label>15 / 6 / 2017</ion-label>
-            <ion-checkbox></ion-checkbox>
-        </ion-item>
-        <ion-item>
-            <ion-label>20 / 6 / 2017</ion-label>
-            <ion-checkbox></ion-checkbox>
-        </ion-item>
-        <ion-item>
-            <ion-label>20 / 7 / 2017</ion-label>
-            <ion-checkbox></ion-checkbox>
-        </ion-item>
-
-        <ion-item>
-            <ion-label>25 / 7 / 2017</ion-label>
-            <ion-checkbox></ion-checkbox>
-        </ion-item>
-    </ion-list>
+   <img [navPush]="report" src="assets/calendar.png">
 </ion-content>
