--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -26,7 +26,7 @@
       </div>
     </ion-item>
     <ion-item>
-        <button [navPush]="report" type="button" class="btn-blue">Report</button>
+        <button [navPush]="calendar" type="button" class="btn-blue">Report</button>
       </ion-item>
     <ion-item>
       <button type="button" class="btn-red">Sign Out</button>
