upload all file

--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,7 @@
 
   <!-- The main bundle js is generated during the build process -->
   <script src="build/main.js"></script>
-
+  <script type="text/javascript" src="js/Calendar.js"></script>
+  
 </body>
 </html>
