--- a/src/pages/calendar/calendar.html
+++ b/src/pages/calendar/calendar.html
@@ -5,5 +5,7 @@
 </ion-header>
 
 <ion-content>
-   <img [navPush]="report" src="assets/calendar.png">
+    <img [navPush]="report" src="assets/calendar.png">
+    <div MyCalendar id="MyCalendar">
+    </div>
 </ion-content>
