--- a/src/pages/qrcode/qrcode.html
+++ b/src/pages/qrcode/qrcode.html
@@ -1,9 +1,29 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>QR code</ion-title>
+    <ion-title>
+      QR Code App
+    </ion-title>
   </ion-navbar>
 </ion-header>
-
-<ion-content>
-  <img src="assets/unnamed.png" />
+ 
+<ion-content padding>
+  <ion-item>
+    <ion-input type="text" placeholder="MY QR Code data" [(ngModel)]="qrData">
+    </ion-input>
+  </ion-item>
+  <button ion-button full icon-left (click)="createCode()"><ion-icon name="barcode"></ion-icon>Create Code</button>
+  <button ion-button full icon-left (click)="scanCode()" color="secondary"><ion-icon name="qr-scanner"></ion-icon>Scan Code</button>
+ 
+  <ion-card *ngIf="createdCode">
+    <ngx-qrcode [qrc-value]="createdCode"></ngx-qrcode>
+    <ion-card-content>
+      <p>Value: {{ createdCode }}</p>
+    </ion-card-content>
+  </ion-card>
+ 
+  <ion-card *ngIf="scannedCode">
+    <ion-card-content>
+      Result from Scan: {{ scannedCode }}
+    </ion-card-content>
+  </ion-card>
 </ion-content>
