--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,4 @@
-<ion-tabs>
+<ion-tabs selectedIndex="2">
   <ion-tab [root]="tab1Root" tabTitle="QR Code" tabIcon="qr-scanner"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Students" tabIcon="list-box"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="Profile" tabIcon="contacts"></ion-tab>
