Send email to parent with qrcode

--- a/src/pages/newstudent/newstudent.html
+++ b/src/pages/newstudent/newstudent.html
@@ -25,6 +25,9 @@
           <ion-item>
             <ion-input placeholder="Parent Tel" name="parent_tel" id="parent_tel" type="text" required [(ngModel)]="student.parent_tel"  clearInput="true"></ion-input>
           </ion-item>
+          <ion-item>
+            <ion-input placeholder="Parent E-mail" name="parent_email" id="parent_email" type="text" required [(ngModel)]="student.parent_email"  clearInput="true"></ion-input>
+          </ion-item>
         </ion-list>
       </ion-col>
     </ion-row>
