--- a/src/pages/qrcode/qrcode.html
+++ b/src/pages/qrcode/qrcode.html
@@ -7,9 +7,9 @@
 </ion-header>
  
 <ion-content padding>
+  <button ion-button full icon-left (click)="scanCode()" color="secondary"><ion-icon name="qr-scanner"></ion-icon>Scan Code</button>    
   <ion-card *ngIf="scannedCode">
     <ion-card-content>
-      Result from Scan: {{ scannedCode }}
     </ion-card-content>
   </ion-card>
 </ion-content>
