Changed ReadMe filed and changed some message

--- a/src/pages/newstudent/newstudent.html
+++ b/src/pages/newstudent/newstudent.html
@@ -34,7 +34,7 @@
     <ion-row>
       <ion-col>
         <div *ngIf="error" class="alert alert-danger">{{error}}</div>
-        <button ion-button class="submit-btn" full type="submit" [disabled]="!loginForm.form.valid">Sign Up
+        <button ion-button class="submit-btn" full type="submit" [disabled]="!loginForm.form.valid">Submit
         </button>
       </ion-col>
     </ion-row>
