update process and check unattendance student

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -29,6 +29,9 @@
       <button [navPush]="calendar" type="button" class="btn-blue">Report</button>
     </ion-item>
     <ion-item>
+      <button [navPush]="linkEditProfile" type="button" class="btn-grey">Edit Profile</button>
+    </ion-item>
+    <ion-item>
       <button (click)="logout()" type="button" class="btn-red">Sign Out</button>
     </ion-item>
   </ion-list>
