--- a/src/pages/student_report/student_report.html
+++ b/src/pages/student_report/student_report.html
@@ -27,6 +27,10 @@
             <ion-checkbox checked="true"></ion-checkbox>
         </ion-item>
         <ion-item>
+            <button class="btn-grey" (click)="editStudent()">Edit this student</button>
+        </ion-item>
+        
+        <ion-item>
             <button class="btn-red" (click)="removeStudent()">Remove this student</button>
         </ion-item>
     </ion-list>
